# stark-ballot-simulator-public

./: .dockerignore  .env.local.example  .gitignore  .prettierignore  .public-export-manifest.json  .public-repository  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  buildspec-risc0-toolchain.yml  buildspec.yml  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
amplify/: backend.ts  package.json
docker/: .dockerignore  Dockerfile.fargate-prover  Dockerfile.risc0-toolchain-amd64  Dockerfile.risc0-toolchain-arm64  REVIEW.md  entrypoint.sh
docs/: PUBLIC_REPOSITORY.md  README.md
formal/: README.md  lake-manifest.json  lakefile.lean
public/: imageId-mapping.json
public-book/: README.md  book.toml  elasticlunr-fzf.js  fzf.umd.js  mermaid-init.js
scripts/: README.md  analyze-stark-receipt.js  clean-mock-sessions.sh  generate-test-vector.ts  generate-test-vectors.ts  setup-docker.sh  start-test-server.sh  test-api-merkle.ts  test-browser-verification.js  update-risc0-digest.sh
src/: proxy.ts
terraform/: backend.tf  cloudtrail.tf  cloudwatch.tf  codebuild.tf  ecr.tf  ecs.tf  iam.tf  lambda_check_image_signature.tf  main.tf  outputs.tf  principal_guard.tf  s3.tf  security_groups.tf  sqs.tf  ssm.tf  step_functions.tf  (+6 more)
verifier-service/: .gitignore  Cargo.toml  Makefile  README.md
verifier-service/scripts/: build-lambda-layer.sh  read-image-id.mjs
verifier-service/src/: lib.rs  main.rs
verifier-service/tests/: cli_verify.rs
zkvm/: Cargo.toml  Makefile  README.md  benchmark-analysis.md  benchmark_results_20250803_162242.csv  benchmark_results_20250803_162253.csv  shared-core-law-inventory.md  test-imageid.json  test-input.json  test-optimization.sh  test-production-proof.sh
zkvm/benchmarks/: Cargo.toml
zkvm/benchmarks/src/: bench_minimal.rs
zkvm/contract-core/: Cargo.toml
zkvm/contract-core/src/: bitmap.rs  encoding.rs  inclusion_proof.rs  lib.rs  sha256.rs  types.rs
zkvm/contract-core/testdata/: rfc6962-ts-golden-vectors.json
zkvm/host/: Cargo.toml
zkvm/host/methods/: guest.json
zkvm/host/src/: main.rs
zkvm/methods/: Cargo.toml
zkvm/methods-minimal/: Cargo.toml
zkvm/methods-minimal/guest-minimal/: Cargo.toml
zkvm/methods-minimal/guest-minimal/src/: main.rs
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: compatibility_test.rs  lib.rs  main.rs  profiling.rs  property_tests.rs  sth.rs  tally.rs  test_vectors.rs
zkvm/test-data/: test-fixture-tampered.json  test-fixture-valid-bitmap.json  test-fixture-valid-seen-bitmap.json  test-fixture-valid.json
(+772 files in other folders)
