[package]
name = "verifier-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
risc0-zkp = { version = "3.0.4", default-features = false, features = ["std"] }
thiserror = "2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
tempfile = "3.27"
