[workspace]
members = ["contract-core", "host", "methods", "methods/guest", "methods-minimal", "methods-minimal/guest-minimal", "benchmarks"]
resolver = "2"

[workspace.dependencies]
risc0-zkvm = "3.0.5"
risc0-build = "3.0.5"
csv = "1.3"
chrono = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
