[package]
name = "contract-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
doctest = false

[dependencies]
risc0-zkvm = { version = "3.0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
hex = "0.4"
proptest = "1.6"
serde_json = "1.0"
sha2 = "0.10"
