[package]
name = "host"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
contract-core = { path = "../contract-core" }
methods = { path = "../methods" }
risc0-zkvm = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
